<resources>
    <string name="app_name">CSN student</string>
    <string name="Alg_and_metod">Algorithms and methods of calculation</string>
    <string name="Arch_Comp">Computer architecture</string>
    <string name="CompScheme">Computer circuitry</string>
    <string name="DataBase">Organization of databases</string>
    <string name="OBG">Fundamentals of Safety</string>
    <string name="S_metod_prog">Modern programming methods</string>
    <string name="Overall">Overall</string>
    <string name="course_2">2 Course</string>
    <string name="subjects">Subjects :</string>
    <string name="lector">Lector:</string>
    <string name="valueOfSubject">Value :</string>
    <string name="Exam">Exam</string>
    <string name="Lessons_schedule">Lessons schedule</string>
    <string name="Passed">Passed</string>
    <string name="Protection">Protected</string>
    <string name="Progress"> Progress :</string>
    <string name="Laboratory">Teacher of laboratory:</string>
    <string name="type">Type</string>
    <string name="number">№</string>
    <string name="lec">lec</string>
    <string name="lab">lab</string>
    <string name="room">Audience</string>
    <string name="subject">Subject</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="title_activity_settings">Settings</string>
    <string name="group_title">Group</string>
    <string name="Base_settings">User settings</string>
    <string-array name="group_arrays">
        <item>КНТ-518</item>
        <item>КНТ-528</item>
    </string-array>
    <string name="group_prompt">Choose a group</string>
    <string name="timeUntil">The end of the pair</string>
    <string name="start">Start of </string>
    <string name="lesson">pair in</string>
    <string name="first_lesson">Start of 1 pair in </string>
    <string name="no_connection_server">No connection with our server,try later...</string>
    <string name="localdata_is_found">Local data found for</string>
    <string name="get_data_dialog">Get data from server or device?</string>
    <string name="device">Device</string>
    <string name="server">Server</string>
    <string name="sign_in">Sign in!</string>
    <string name="login">Login</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="password">Password</string>
    <string name="successfully_login">Successfully login</string>
    <string name="inccorect_password">Inccorect password</string>
    <string name="no_user">User not found</string>
    <string name="no_connection">No connection</string>
    <string name="nickname">Nickname</string>
    <string name="password_conf">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="nickname_error">Please enter nickname"</string>
    <string name="password_error">Enter password"</string>
    <string name="nickname_is_taken">This nickname is taken by another user</string>
    <string name="successfully_registration">Successfully registration"</string>
    <string name="test">Test</string>
    <string name="lab1">Laboratory 1</string>
    <string name="lab2">Laboratory 2</string>
    <string name="lab3">Laboratory 3</string>
    <string name="lab4">Laboratory 4</string>
    <string name="lab5">Laboratory 5</string>
    <string name="lab6">Laboratory 6</string>
    <string name="lab7">Laboratory 7</string>
    <string name="teacher_AMO">Kudermetov Ravil Kamilovich</string>
    <string name="teacher_CA">Skrupsky Stepan Yurievich</string>
    <string name="teacher_CS">Sgadov Sergey Alexandrovich</string>
    <string name="teacher_OBD">Paromova Tatiana Alexandrovna</string>
    <string name="teacher_OBG">Squibid Olga Leonidovna</string>
    <string name="test_exam">Test/Exam</string>
    <string name="diff_exam">Diff.Exam</string>
    <string name="group">Group</string>
    <string name="IHW">IHW</string>
    <string-array name="subjects_values">
        <item>Algorithms and methods of calculation</item>
        <item>Computer architecture</item>
        <item>Computer circuitry</item>
        <item>Organization of databases</item>
        <item>Fundamentals of Safety</item>
        <item>Modern programming methods</item>
    </string-array>
    <string name="home_screen">Home screen</string>
    <string name="timer">Timer</string>
    <string name="account_exit">Exit from account</string>
    <string name="full_nickname">Nickname</string>
    <string name="denominator">The denominator</string>
    <string name="numerator">The numerator</string>
    <string name="pair">Pair</string>
    <string name="group_with_2dots">Group:</string>
    <string name="no_account_1">New student?\t</string>
    <string name="no_account_2">Create an account</string>
    <string name="account_1">Already have an account?\t</string>
    <string name="account_2">Sign in</string>
    <string name="Rating">Rating</string>
    <string name="datachanged">Successfully changed</string>
    <string name="nodata">Enter data!</string>
    <string name="not_set">Not set!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Successfully log out</string>
    <string name="all">ALL</string>
    <string name="exitconfirm">Are you sure you want to log out?</string>
    <string name="mon">\t\t\t\tMON\t\t\t\t</string>
    <string name="tue">\t\t\t\tTUE\t\t\t\t</string>
    <string name="wed">\t\t\t\tWED\t\t\t\t</string>
    <string name="thu">\t\t\t\tTHU\t\t\t\t</string>
    <string name="fri">\t\t\t\tFRI\t\t\t\t</string>
</resources>

