<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_background"
        android:layout_weight="0.3"
        android:orientation="vertical">

       <TextView
           android:layout_width="300dp"
           android:layout_height="48dp"
           android:layout_gravity="center"
           android:layout_weight="0.8"
           android:gravity="center"
           android:text="@string/course_2"
           android:textColor="@color/white"
           android:textSize="25dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
     </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/Alg"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_style"
                android:onClick="OnClick"
                android:text="@string/Alg_and_metod"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Arch"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_style"
                android:onClick="OnClick"
                android:text="@string/Arch_Comp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/CS"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_style"
                android:onClick="OnClick"
                android:text="@string/CompScheme"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/OBD"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_style"
                android:onClick="OnClick"
                android:text="@string/OBG"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/OBG"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_style"
                android:onClick="OnClick"
                android:text="@string/DataBase"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/SMP"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_style"
                android:onClick="OnClick"
                android:text="@string/S_metod_prog"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:id="@+id/layoutCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@drawable/progress"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/Overall"
            android:backgroundTint="#00FFFFFF"
            android:stateListAnimator="@null"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/res"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:backgroundTint="#00FFFFFF"
            android:stateListAnimator="@null"
            android:textColor="@color/white"
            android:text="0 %" />
    </LinearLayout>

</LinearLayout>
