<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/activity_subject_info_bt_subjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dark_background2"
                    android:text="@string/Arch_Comp"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/activity_subject_info_bt_teacher_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/text_style"
                            android:clickable="false"
                            android:gravity="center"
                            android:text="@string/lector"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                        <Button
                            android:id="@+id/activity_subject_info_bt_teacher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/text_style"
                            android:clickable="false"
                            android:gravity="center"
                            android:text="@string/teacher_CA"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </TableRow>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/activity_subject_info_bt_value_text"
                            android:layout_width="13dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/text_style"
                            android:clickable="false"
                            android:gravity="center"
                            android:text="@string/valueOfSubject"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                        <Button
                            android:id="@+id/activity_subject_info_bt_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/text_style"
                            android:clickable="false"
                            android:gravity="center"
                            android:text="@string/not_set"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/activity_subject_info_ll_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/progress2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/activity_subject_info_bt_progress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#00FFFFFF"
                        android:stateListAnimator="@null"
                        android:text="@string/Progress"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/activity_subject_info_bt_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#00FFFFFF"
                        android:stateListAnimator="@null"
                        android:text="X %"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
